# repository-insight

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml
api/: Dockerfile  dev_start.sh  pyproject.toml  requirements.txt
api/src/: main.py
api/src/agent/: agents.py  base.py  llm.py  prompt.py  utils.py
api/src/agent/ingest/: agents.py  base.py  tool.py  utils.py
api/src/agent/insight/: agents.py  core.py  prompt.py  tool.py
api/src/agent/insight/tools/: neo4j_utils.py  search.py  utils.py
api/src/core/: config.py  db.py  index.py  logger_config.py
api/src/service/: api.py  ingestion.py  insight_ws.py  llama_ingestion.py  websocket_manager.py
api/src/service/ingest/: embedding.py  enrichment.py  file_handler.py  folder_handler.py  git_repo_parser.py  main_ingest.py  node.py  relationship.py
api/src/utils/: git_utils.py  graph_utils.py  helper.py  llamaindex_ingest.py
docs/: EnrichKG_MutiAgentWorkflow.ipynb  EnrichKG_ParrallelAgent.ipynb  EnrichKG_Workflow.ipynb  KG_Agent.ipynb  git_functionality.ipynb  neo4j_functions.ipynb  rag.ipynb  stucture_output.ipynb
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.jsx  FormattedMessage.jsx  index.css
