[tool.poetry]
name = "repoinsight"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.1"
psycopg2-binary = "^2.9.10"
fsspec = "^2025.3.0"
polygon = "^1.2.6"
polygon-api-client = "^1.14.4"
llama-index = "^0.12.26"
llama-index-agent-openai = "^0.4.6"
llama-index-cli = "^0.4.1"
llama-index-core = "^0.12.26"
llama-index-llms-gemini = "^0.4.14"
openai = "^1.68.2"
aiofiles = "^24.1.0"
opentelemetry-api = "^1.31.1"
opentelemetry-sdk = "^1.31.1"
opentelemetry-instrumentation-fastapi = "^0.52b1"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-instrumentation-requests = "^0.52b1"
opentelemetry-exporter-zipkin = "^1.31.1"
pygit2 = "^1.17.0"
neo4j = "^5.28.1"
llama-index-llms-google-genai = "^0.1.7"
json-repair = "^0.40.0"
llama-index-graph-stores-neo4j = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
